// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyTable::render should render predicate-literal pairs 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PropertyTable
    quads={
      Array [
        Quad {
          "graph": DefaultGraph {
            "termType": "DefaultGraph",
            "value": "",
          },
          "object": Literal {
            "dataType": NamedNode {
              "termType": "NamedNode",
              "value": "http://www.w3.org/2001/XMLSchema#string",
            },
            "language": "",
            "termType": "Literal",
            "value": "baz",
          },
          "predicate": NamedNode {
            "termType": "NamedNode",
            "value": "bar",
          },
          "subject": NamedNode {
            "termType": "NamedNode",
            "value": "foo",
          },
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Table
        responsiveTag="div"
        tag="table"
      >
        <tbody>
          <tr>
            <th
              scope="row"
            >
              <a
                href="bar"
              >
                <Connect(Component)
                  graph={
                    DefaultGraph {
                      "termType": "DefaultGraph",
                      "value": "",
                    }
                  }
                  resource={
                    NamedNode {
                      "termType": "NamedNode",
                      "value": "bar",
                    }
                  }
                />
              </a>
            </th>
            <td>
              baz
            </td>
          </tr>
        </tbody>
      </Table>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <tbody>
          <tr>
            <th
              scope="row"
            >
              <a
                href="bar"
              >
                <Connect(Component)
                  graph={
                    DefaultGraph {
                      "termType": "DefaultGraph",
                      "value": "",
                    }
                  }
                  resource={
                    NamedNode {
                      "termType": "NamedNode",
                      "value": "bar",
                    }
                  }
                />
              </a>
            </th>
            <td>
              baz
            </td>
          </tr>
        </tbody>,
        "responsiveTag": "div",
        "tag": "table",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <tr>
              <th
                scope="row"
              >
                <a
                  href="bar"
                >
                  <Connect(Component)
                    graph={
                      DefaultGraph {
                        "termType": "DefaultGraph",
                        "value": "",
                      }
                    }
                    resource={
                      NamedNode {
                        "termType": "NamedNode",
                        "value": "bar",
                      }
                    }
                  />
                </a>
              </th>
              <td>
                baz
              </td>
            </tr>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "barbaz",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <th
                  scope="row"
                >
                  <a
                    href="bar"
                  >
                    <Connect(Component)
                      graph={
                        DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        }
                      }
                      resource={
                        NamedNode {
                          "termType": "NamedNode",
                          "value": "bar",
                        }
                      }
                    />
                  </a>
                </th>,
                <td>
                  baz
                </td>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    href="bar"
                  >
                    <Connect(Component)
                      graph={
                        DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        }
                      }
                      resource={
                        NamedNode {
                          "termType": "NamedNode",
                          "value": "bar",
                        }
                      }
                    />
                  </a>,
                  "scope": "row",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Connect(Component)
                      graph={
                        DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        }
                      }
                      resource={
                        NamedNode {
                          "termType": "NamedNode",
                          "value": "bar",
                        }
                      }
                    />,
                    "href": "bar",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "graph": DefaultGraph {
                        "termType": "DefaultGraph",
                        "value": "",
                      },
                      "resource": NamedNode {
                        "termType": "NamedNode",
                        "value": "bar",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
                "type": "th",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "baz",
                },
                "ref": null,
                "rendered": "baz",
                "type": "td",
              },
            ],
            "type": "tr",
          },
        ],
        "type": "tbody",
      },
      "type": [Function],
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Table
          responsiveTag="div"
          tag="table"
        >
          <tbody>
            <tr>
              <th
                scope="row"
              >
                <a
                  href="bar"
                >
                  <Connect(Component)
                    graph={
                      DefaultGraph {
                        "termType": "DefaultGraph",
                        "value": "",
                      }
                    }
                    resource={
                      NamedNode {
                        "termType": "NamedNode",
                        "value": "bar",
                      }
                    }
                  />
                </a>
              </th>
              <td>
                baz
              </td>
            </tr>
          </tbody>
        </Table>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <tbody>
            <tr>
              <th
                scope="row"
              >
                <a
                  href="bar"
                >
                  <Connect(Component)
                    graph={
                      DefaultGraph {
                        "termType": "DefaultGraph",
                        "value": "",
                      }
                    }
                    resource={
                      NamedNode {
                        "termType": "NamedNode",
                        "value": "bar",
                      }
                    }
                  />
                </a>
              </th>
              <td>
                baz
              </td>
            </tr>
          </tbody>,
          "responsiveTag": "div",
          "tag": "table",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <tr>
                <th
                  scope="row"
                >
                  <a
                    href="bar"
                  >
                    <Connect(Component)
                      graph={
                        DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        }
                      }
                      resource={
                        NamedNode {
                          "termType": "NamedNode",
                          "value": "bar",
                        }
                      }
                    />
                  </a>
                </th>
                <td>
                  baz
                </td>
              </tr>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "barbaz",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <th
                    scope="row"
                  >
                    <a
                      href="bar"
                    >
                      <Connect(Component)
                        graph={
                          DefaultGraph {
                            "termType": "DefaultGraph",
                            "value": "",
                          }
                        }
                        resource={
                          NamedNode {
                            "termType": "NamedNode",
                            "value": "bar",
                          }
                        }
                      />
                    </a>
                  </th>,
                  <td>
                    baz
                  </td>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      href="bar"
                    >
                      <Connect(Component)
                        graph={
                          DefaultGraph {
                            "termType": "DefaultGraph",
                            "value": "",
                          }
                        }
                        resource={
                          NamedNode {
                            "termType": "NamedNode",
                            "value": "bar",
                          }
                        }
                      />
                    </a>,
                    "scope": "row",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Connect(Component)
                        graph={
                          DefaultGraph {
                            "termType": "DefaultGraph",
                            "value": "",
                          }
                        }
                        resource={
                          NamedNode {
                            "termType": "NamedNode",
                            "value": "bar",
                          }
                        }
                      />,
                      "href": "bar",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "graph": DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        },
                        "resource": NamedNode {
                          "termType": "NamedNode",
                          "value": "bar",
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "a",
                  },
                  "type": "th",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "baz",
                  },
                  "ref": null,
                  "rendered": "baz",
                  "type": "td",
                },
              ],
              "type": "tr",
            },
          ],
          "type": "tbody",
        },
        "type": [Function],
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`PropertyTable::render should render predicate-node pairs 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PropertyTable
    quads={
      Array [
        Quad {
          "graph": DefaultGraph {
            "termType": "DefaultGraph",
            "value": "",
          },
          "object": NamedNode {
            "termType": "NamedNode",
            "value": "baz",
          },
          "predicate": NamedNode {
            "termType": "NamedNode",
            "value": "bar",
          },
          "subject": NamedNode {
            "termType": "NamedNode",
            "value": "foo",
          },
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Table
        responsiveTag="div"
        tag="table"
      >
        <tbody>
          <tr>
            <th
              scope="row"
            >
              <a
                href="bar"
              >
                <Connect(Component)
                  graph={
                    DefaultGraph {
                      "termType": "DefaultGraph",
                      "value": "",
                    }
                  }
                  resource={
                    NamedNode {
                      "termType": "NamedNode",
                      "value": "bar",
                    }
                  }
                />
              </a>
            </th>
            <td>
              <a
                href="baz"
              >
                <Connect(Component)
                  graph={
                    DefaultGraph {
                      "termType": "DefaultGraph",
                      "value": "",
                    }
                  }
                  resource={
                    NamedNode {
                      "termType": "NamedNode",
                      "value": "baz",
                    }
                  }
                />
              </a>
            </td>
          </tr>
        </tbody>
      </Table>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <tbody>
          <tr>
            <th
              scope="row"
            >
              <a
                href="bar"
              >
                <Connect(Component)
                  graph={
                    DefaultGraph {
                      "termType": "DefaultGraph",
                      "value": "",
                    }
                  }
                  resource={
                    NamedNode {
                      "termType": "NamedNode",
                      "value": "bar",
                    }
                  }
                />
              </a>
            </th>
            <td>
              <a
                href="baz"
              >
                <Connect(Component)
                  graph={
                    DefaultGraph {
                      "termType": "DefaultGraph",
                      "value": "",
                    }
                  }
                  resource={
                    NamedNode {
                      "termType": "NamedNode",
                      "value": "baz",
                    }
                  }
                />
              </a>
            </td>
          </tr>
        </tbody>,
        "responsiveTag": "div",
        "tag": "table",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <tr>
              <th
                scope="row"
              >
                <a
                  href="bar"
                >
                  <Connect(Component)
                    graph={
                      DefaultGraph {
                        "termType": "DefaultGraph",
                        "value": "",
                      }
                    }
                    resource={
                      NamedNode {
                        "termType": "NamedNode",
                        "value": "bar",
                      }
                    }
                  />
                </a>
              </th>
              <td>
                <a
                  href="baz"
                >
                  <Connect(Component)
                    graph={
                      DefaultGraph {
                        "termType": "DefaultGraph",
                        "value": "",
                      }
                    }
                    resource={
                      NamedNode {
                        "termType": "NamedNode",
                        "value": "baz",
                      }
                    }
                  />
                </a>
              </td>
            </tr>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "barbaz",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <th
                  scope="row"
                >
                  <a
                    href="bar"
                  >
                    <Connect(Component)
                      graph={
                        DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        }
                      }
                      resource={
                        NamedNode {
                          "termType": "NamedNode",
                          "value": "bar",
                        }
                      }
                    />
                  </a>
                </th>,
                <td>
                  <a
                    href="baz"
                  >
                    <Connect(Component)
                      graph={
                        DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        }
                      }
                      resource={
                        NamedNode {
                          "termType": "NamedNode",
                          "value": "baz",
                        }
                      }
                    />
                  </a>
                </td>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    href="bar"
                  >
                    <Connect(Component)
                      graph={
                        DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        }
                      }
                      resource={
                        NamedNode {
                          "termType": "NamedNode",
                          "value": "bar",
                        }
                      }
                    />
                  </a>,
                  "scope": "row",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Connect(Component)
                      graph={
                        DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        }
                      }
                      resource={
                        NamedNode {
                          "termType": "NamedNode",
                          "value": "bar",
                        }
                      }
                    />,
                    "href": "bar",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "graph": DefaultGraph {
                        "termType": "DefaultGraph",
                        "value": "",
                      },
                      "resource": NamedNode {
                        "termType": "NamedNode",
                        "value": "bar",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
                "type": "th",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    href="baz"
                  >
                    <Connect(Component)
                      graph={
                        DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        }
                      }
                      resource={
                        NamedNode {
                          "termType": "NamedNode",
                          "value": "baz",
                        }
                      }
                    />
                  </a>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Connect(Component)
                      graph={
                        DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        }
                      }
                      resource={
                        NamedNode {
                          "termType": "NamedNode",
                          "value": "baz",
                        }
                      }
                    />,
                    "href": "baz",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "graph": DefaultGraph {
                        "termType": "DefaultGraph",
                        "value": "",
                      },
                      "resource": NamedNode {
                        "termType": "NamedNode",
                        "value": "baz",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
                "type": "td",
              },
            ],
            "type": "tr",
          },
        ],
        "type": "tbody",
      },
      "type": [Function],
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Table
          responsiveTag="div"
          tag="table"
        >
          <tbody>
            <tr>
              <th
                scope="row"
              >
                <a
                  href="bar"
                >
                  <Connect(Component)
                    graph={
                      DefaultGraph {
                        "termType": "DefaultGraph",
                        "value": "",
                      }
                    }
                    resource={
                      NamedNode {
                        "termType": "NamedNode",
                        "value": "bar",
                      }
                    }
                  />
                </a>
              </th>
              <td>
                <a
                  href="baz"
                >
                  <Connect(Component)
                    graph={
                      DefaultGraph {
                        "termType": "DefaultGraph",
                        "value": "",
                      }
                    }
                    resource={
                      NamedNode {
                        "termType": "NamedNode",
                        "value": "baz",
                      }
                    }
                  />
                </a>
              </td>
            </tr>
          </tbody>
        </Table>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <tbody>
            <tr>
              <th
                scope="row"
              >
                <a
                  href="bar"
                >
                  <Connect(Component)
                    graph={
                      DefaultGraph {
                        "termType": "DefaultGraph",
                        "value": "",
                      }
                    }
                    resource={
                      NamedNode {
                        "termType": "NamedNode",
                        "value": "bar",
                      }
                    }
                  />
                </a>
              </th>
              <td>
                <a
                  href="baz"
                >
                  <Connect(Component)
                    graph={
                      DefaultGraph {
                        "termType": "DefaultGraph",
                        "value": "",
                      }
                    }
                    resource={
                      NamedNode {
                        "termType": "NamedNode",
                        "value": "baz",
                      }
                    }
                  />
                </a>
              </td>
            </tr>
          </tbody>,
          "responsiveTag": "div",
          "tag": "table",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <tr>
                <th
                  scope="row"
                >
                  <a
                    href="bar"
                  >
                    <Connect(Component)
                      graph={
                        DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        }
                      }
                      resource={
                        NamedNode {
                          "termType": "NamedNode",
                          "value": "bar",
                        }
                      }
                    />
                  </a>
                </th>
                <td>
                  <a
                    href="baz"
                  >
                    <Connect(Component)
                      graph={
                        DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        }
                      }
                      resource={
                        NamedNode {
                          "termType": "NamedNode",
                          "value": "baz",
                        }
                      }
                    />
                  </a>
                </td>
              </tr>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "barbaz",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <th
                    scope="row"
                  >
                    <a
                      href="bar"
                    >
                      <Connect(Component)
                        graph={
                          DefaultGraph {
                            "termType": "DefaultGraph",
                            "value": "",
                          }
                        }
                        resource={
                          NamedNode {
                            "termType": "NamedNode",
                            "value": "bar",
                          }
                        }
                      />
                    </a>
                  </th>,
                  <td>
                    <a
                      href="baz"
                    >
                      <Connect(Component)
                        graph={
                          DefaultGraph {
                            "termType": "DefaultGraph",
                            "value": "",
                          }
                        }
                        resource={
                          NamedNode {
                            "termType": "NamedNode",
                            "value": "baz",
                          }
                        }
                      />
                    </a>
                  </td>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      href="bar"
                    >
                      <Connect(Component)
                        graph={
                          DefaultGraph {
                            "termType": "DefaultGraph",
                            "value": "",
                          }
                        }
                        resource={
                          NamedNode {
                            "termType": "NamedNode",
                            "value": "bar",
                          }
                        }
                      />
                    </a>,
                    "scope": "row",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Connect(Component)
                        graph={
                          DefaultGraph {
                            "termType": "DefaultGraph",
                            "value": "",
                          }
                        }
                        resource={
                          NamedNode {
                            "termType": "NamedNode",
                            "value": "bar",
                          }
                        }
                      />,
                      "href": "bar",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "graph": DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        },
                        "resource": NamedNode {
                          "termType": "NamedNode",
                          "value": "bar",
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "a",
                  },
                  "type": "th",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      href="baz"
                    >
                      <Connect(Component)
                        graph={
                          DefaultGraph {
                            "termType": "DefaultGraph",
                            "value": "",
                          }
                        }
                        resource={
                          NamedNode {
                            "termType": "NamedNode",
                            "value": "baz",
                          }
                        }
                      />
                    </a>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Connect(Component)
                        graph={
                          DefaultGraph {
                            "termType": "DefaultGraph",
                            "value": "",
                          }
                        }
                        resource={
                          NamedNode {
                            "termType": "NamedNode",
                            "value": "baz",
                          }
                        }
                      />,
                      "href": "baz",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "graph": DefaultGraph {
                          "termType": "DefaultGraph",
                          "value": "",
                        },
                        "resource": NamedNode {
                          "termType": "NamedNode",
                          "value": "baz",
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": "a",
                  },
                  "type": "td",
                },
              ],
              "type": "tr",
            },
          ],
          "type": "tbody",
        },
        "type": [Function],
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
